--- a/pom.xml
+++ b/pom.xml
@@ -64,4 +64,17 @@
       </plugins>
     </pluginManagement>
   </build>
+<distributionManagement>
+      <snapshotRepository>
+        <id>nexus</id>
+        <name>devops</name>
+	<url>http://localhost:8081/repository/today/</url>
+      </snapshotRepository>
+      <repository>
+        <id>nexus</id>
+        <name>devops markonda</name>
+	<url>http://localhost:8081/repository/today/</url>
+      </repository>	
+   </distributionManagement>
+  
 </project>
